--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "database": {
         "host": "localhost",
         "dbname": "shiksha",
-        "username": "jharvard",
-        "password": "crimson"
+        "username": "priyarani28",
+        "password": "3vXt73bGW7mEcGnI"
     }
  }
